--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sachi.classic_flutter_news">
+    package="com.mmsoftware100.marriedhealth">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -8,9 +8,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="classic flutter news"
+        android:label="အိမ်ထောင်သည် ကျန်းမာရေး"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
+
+        <!-- test app ID : ca-app-pub-3940256099942544~3347511713 -->
+        <!-- app ID : ca-app-pub-7499955469448445~5936919479 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-7499955469448445~5936919479"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
