--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A Classic Flutter News application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0
+version: 1.0.3+3
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -35,8 +35,10 @@ dependencies:
   http: ^0.12.1
   image_picker: ^0.6.6+1
   pin_code_fields: ^3.0.0
+  admob_flutter: ^1.0.1
 
 dev_dependencies:
+  change_app_package_name: ^0.1.2
   flutter_test:
     sdk: flutter
 
